--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
 
 spring.queries.users-query = select username, password, active from user where username=?
-spring.queries.roles-query = select u.username, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.username=?
+spring.queries.roles-query = select u.username, r.role from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where u.username=?
